--- a/client/public/index.ejs
+++ b/client/public/index.ejs
@@ -6,6 +6,7 @@
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
+    <link rel="icon" href="<%= PUBLIC_URL %>/favicon.ico" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Asnity</title>
   </head>
