design: no-scrollbar css 추가

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,3 +19,12 @@
   left: 0;
   right: 0;
 }
+
+.no-display-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-display-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
