--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,3 +28,9 @@
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
+
+.loader-default {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
