feat: 에러 아이콘 추가

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -34,3 +34,9 @@
   justify-content: center;
   align-items: center;
 }
+
+.error-icon-default {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
