--- a/client/src/index.css
+++ b/client/src/index.css
@@ -40,3 +40,11 @@
   justify-content: center;
   align-items: center;
 }
+
+#tooltip {
+  z-index: 9999;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  pointer-events: none;
+}
